# levante-wp-api

./: Cargo.toml
migrations/2018-02-23-054202_schema/: down.sql  up.sql
resources/assets/config/: development.json
resources/tools/: levante.service
src/: main.rs
src/controller/: crud_trait.rs  errors.rs  mod.rs  posts.rs
src/model/: mod.rs  wp_model.rs
src/orm/: database.rs  db.rs  mod.rs  model.rs  schema.rs
src/util/: config.rs
