[package]
name = "lwapi"
version = "0.1.0"
authors = ["Crazz <mhxdev@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = { version = "0.3.6", features = ["json"] }
diesel = { version = "1.1.1", features = ["mysql","r2d2"] }
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"